<resources>
    <string name="app_name">ToDo</string>
    <string name="dashboard">Dashboard</string>
    <string name="add_task">Add Task</string>
    <string name="chatting">Chatting</string>
    <string name="all_tasks_to_do">All tasks to do</string>
    <string name="time">Time:</string>
    <string name="date">Date:</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="signup">Signup</string>
    <string name="remember">Remember</string>
    <string name="forgot_passsword">Forgot password?</string>
    <string name="pending">Pending</string>
    <string name="info_must_not_be_empty">Info must not be empty</string>
    <string name="signup_failed">Signup Failed</string>
    <string name="login_failed">Login Failed</string>
    <string name="signup_success">Signup Success</string>
    <string name="login_success">Login Success</string>
    <string name="task_name">Task name&#8230; (maximum 20 characters)</string>
    <string name="task_detail">Task detail&#8230;</string>
    <string name="date_not_2_dot">Date</string>
    <string name="time_not_2_dot">Time</string>
    <string name="no_title">(No title)</string>
    <string name="task_detail_must_not_be_empty">Task detail must not be empty</string>
    <string name="add_new_task">Add new task</string>
    <string name="hint_message">Add your new message here</string>
    <string name="add_new_message_here">Add new message here&#8230;</string>
    <string name="error_message_empty">Oops. There was a problem!</string>
    <string name="fork_me_on_github">Fork me on GitHub :)</string>
    <string name="developed_by_nguyencse">Developed by nguyencse</string>
    <string name="slogan">Save more - Do more</string>
    <string name="task_detail_too_long">Task name too long. Try with another one</string>
    <string name="total">Total:</string>
    <string name="tasks">tasks</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="logout">Logout</string>
    <string name="global_room">Global</string>
    <string name="private_room">Private</string>
    <string name="happened">Happened</string>
    <string name="please_chose_a_date">Please chose a date</string>
    <string name="please_chose_a_time">Please chose a time</string>
    <string name="all_tasks_today">All tasks today</string>
    <string name="show_all">Show all</string>
    <string name="today">Today</string>
    <string name="warning">Warning</string>
    <string name="confirm_exit_app">Do you want to exit this app?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="not_yet_supported">Not yet supported</string>
    <string name="more">More</string>
    <string name="friends">Friends</string>
    <string name="all_users">All Users</string>
    <string name="username">Username</string>
    <string name="add_friend">Add friend</string>
    <string name="unfriend">Unfriend</string>
    <string name="message">Message</string>
    <string name="friend_added">Friend added :)</string>
    <string name="unfriended">Unfriended :(</string>
    <string name="people_with_todo">People with Todo</string>
    <string name="confirm_logout">Do you want to logout this app?</string>
    <string name="add_friend_with_this_user">Add friend with this user?</string>
    <string name="nothing_to_show_here">Nothing to show here</string>
    <string name="update_your_profile">Update your profile</string>
    <string name="edit_username">Username</string>
    <string name="username_none_caps">username</string>
    <string name="update">Update</string>
    <string name="this_field_must_not_be_empty">This field must not be empty</string>
</resources>
