<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginBottom="20dp"
            android:src="@drawable/ic_smiling_baby" />

        <com.nguyencse.todo.custom.TextViewCSE
            android:id="@+id/textViewCSE2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginStart="5dp"
            android:text="@string/app_name"
            android:textColor="@android:color/black"
            android:textSize="40sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="50dp"
            android:layout_marginStart="50dp"
            android:orientation="vertical">

            <com.nguyencse.todo.custom.EditTextCSE
                android:id="@+id/edt_auth_email"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/bg_edittext"
                android:cursorVisible="false"
                android:gravity="center"
                android:hint="@string/email"
                android:imeOptions="flagNoExtractUi"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:paddingEnd="10dp"
                android:paddingStart="10dp"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textColorHint="@color/colorGrayDark" />

            <com.nguyencse.todo.custom.EditTextCSE
                android:id="@+id/edt_auth_password"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/bg_edittext"
                android:cursorVisible="false"
                android:gravity="center"
                android:hint="@string/password"
                android:imeOptions="flagNoExtractUi"
                android:inputType="textPassword"
                android:maxLines="1"
                android:paddingEnd="10dp"
                android:paddingStart="10dp"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textColorHint="@color/colorGrayDark" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:orientation="horizontal">

                <com.nguyencse.todo.custom.ButtonCSE
                    android:id="@+id/btn_login"
                    android:layout_width="wrap_content"
                    android:layout_height="42dp"
                    android:background="@drawable/bg_button_underline_clickable"
                    android:text="@string/login"
                    android:textAllCaps="false" />

                <com.nguyencse.todo.custom.ButtonCSE
                    android:id="@+id/btn_signup"
                    android:layout_width="wrap_content"
                    android:layout_height="42dp"
                    android:layout_marginStart="10dp"
                    android:background="@drawable/bg_button_underline_clickable"
                    android:text="@string/signup"
                    android:textAllCaps="false" />
            </LinearLayout>
        </LinearLayout>

        <com.nguyencse.todo.custom.TextViewCSE
            android:id="@+id/textViewCSE3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="50dp"
            android:text="@string/developed_by_nguyencse"
            android:textColor="@color/colorPrimaryDark" />
    </LinearLayout>
</ScrollView>