<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/lnl_item_task"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:elevation="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:orientation="horizontal"
            android:paddingBottom="10dp"
            android:paddingTop="10dp">

            <View
                android:layout_width="2dp"
                android:layout_height="match_parent"
                android:background="@color/colorPrimaryDark" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <com.nguyencse.todo.custom.TextViewCSE
                        android:id="@+id/txt_item_task_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="5dp"
                        android:ellipsize="end"
                        android:textColor="@color/colorPrimary"
                        android:textSize="18sp" />

                    <View
                        android:layout_width="0dp"
                        android:layout_height="1dp"
                        android:layout_weight="1" />

                    <com.nguyencse.todo.custom.TextViewCSE
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/time"
                        android:textColor="@color/colorPrimary" />

                    <com.nguyencse.todo.custom.TextViewCSE
                        android:id="@+id/txt_item_task_time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:textColor="@android:color/black" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:gravity="end"
                    android:orientation="horizontal">

                    <com.nguyencse.todo.custom.TextViewCSE
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/date"
                        android:textColor="@color/colorPrimary" />

                    <com.nguyencse.todo.custom.TextViewCSE
                        android:id="@+id/txt_item_task_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:textColor="@android:color/black" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <com.nguyencse.todo.custom.TextViewCSE
                        android:id="@+id/txt_item_task_detail"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ellipsize="end"
                        android:maxLines="1"
                        android:textColor="@android:color/black" />

                    <com.nguyencse.todo.custom.TextViewCSE
                        android:id="@+id/txt_item_task_status"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:text="@string/pending"
                        android:textColor="@color/colorPrimary" />
                </LinearLayout>
            </LinearLayout>

            <ImageButton
                android:id="@+id/btn_item_task_options"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="10dp"
                android:background="@drawable/bg_button_transparent_clickable"
                android:src="@drawable/ic_more_red" />
        </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>